theme and view fixes

--- a/corpstats/templates/corpstat/alliancestats.html
+++ b/corpstats/templates/corpstat/alliancestats.html
@@ -17,26 +17,39 @@
         </div>
     </div>
 <div class="row"><h3 class="text-center">Corporation Breakdown</h3>
-   <table class="table table-striped datatables" id="table-corps">
-   <thead><th>Corporation</th><th>Auth'd Mains</th><th>Auth'd Alts</th><th>Member Count</th><th>Registered</th></thead><tbody>
-{% for corp, cs in corp_breakdown.items %}
-                                        <tr>
-<td>{{corp}}</td>                                        
-    <td class="text-center">{{ cs.mains }} </td>
-                                            <td class="text-center">{{ cs.alts }}</td>
-                                            <td class="text-center">{{ cs.total }} </td>
-                                            <td class="text-center">{% if cs.total %}{% widthratio cs.members cs.total 100 %}%{% endif %} </td>
-                                        </tr>
-    {% endfor %}</tbody></table></div>
+    <table class="table table-striped datatables" id="table-corps">
+        <thead>
+            <th>Corporation</th>
+            <th>Auth'd Mains</th>
+            <th>Auth'd Alts</th>
+            <th>Member Count</th>
+            <th>Registered</th>
+        </thead>
+        <tbody>
+            {% for corp, cs in corp_breakdown.items %}
+                <tr>
+                    <td>{{corp}}</td>
+                    <td class="text-center">{{ cs.mains }} </td>
+                    <td class="text-center">{{ cs.alts }}</td>
+                    <td class="text-center">{{ cs.total }} </td>
+                    <td class="text-center">{% if cs.total %}{% widthratio cs.members cs.total 100 %}%{% endif %} </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+   </table>
+</div>
 {% endblock %}
 {% block extra_javascript %}
     {% include 'bundles/datatables-js.html' %}
+{% endblock %}
+{% block extra_css %}
+    {% include 'bundles/datatables-css.html' %}
 {% endblock %}
 {% block extra_script %}
     $(document).ready(function() {
         $('#table-corps').DataTable({
             "order": [
-                [1, "desc"]
+                [0, "desc"]
             ],
             "pageLength": 100
         });
