--- a/corpstats/templates/corpstat/corpstats.html
+++ b/corpstats/templates/corpstat/corpstats.html
@@ -202,24 +202,24 @@
                                                 <tbody>
                                                     {% for member in unregistered_members %}
                                                         <tr class="danger">
-                                                            <td><img src="{{ member.portrait_url }}" class="img-circle"></td>
-                                                            <td class="text-center">{{ member.character_name }}</td>
-                                                            <td class="text-center">{{ member.ship_type_name }}</td>
-                                                            <td class="text-center">{{ member.logoff_date|date:"Y-m-d H:i" }}<br><span class="label label-default">{{ member.logon_date|timesince }} ago</span><br><span class="label label-default">Duration: {{ member.logon_date|timesince:member.logoff_date }}</span></td>
-                                                            <td class="text-center">{{ member.start_date|date:"Y-m-d H:i" }}<br><span class="label label-default">{{ member.start_date|timesince }}</span></td>
-                                                            <td class="text-center">
+                                                            <td class="text-center" style="vertical-align:middle"><img src="{{ member.portrait_url }}" class="img-circle"></td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.character_name }}</td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.ship_type_name }}</td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.logoff_date|date:"Y-m-d H:i" }}<br><span class="label label-primary">{{ member.logon_date|timesince }} ago</span><br><span class="label label-default">Duration: {{ member.logon_date|timesince:member.logoff_date }}</span></td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.start_date|date:"Y-m-d H:i" }}<br><span class="label label-primary">{{ member.start_date|timesince }}</span></td>
+                                                            <td class="text-center" style="vertical-align:middle">
                                                                 <span class="glyphicon glyphicon-remove"></span>
                                                             </td>
                                                         </tr>
                                                     {% endfor %}
                                                     {% for member in tracking %}
                                                         <tr >
-                                                            <td><img src="{{ member.portrait_url }}" class="img-circle"></td>
-                                                            <td class="text-center">{{ member.character_name }}</td>
-                                                            <td class="text-center">{{ member.ship_type_name }}</td>
-                                                            <td class="text-center">{{ member.logoff_date|date:"Y-m-d H:i" }}<br><span class="label label-default">{{ member.logon_date|timesince }} ago</span><br><span class="label label-default">Duration: {{ member.logon_date|timesince:member.logoff_date }}</span></td>
-                                                            <td class="text-center">{{ member.start_date|date:"Y-m-d H:i" }}<br><span class="label label-default">{{ member.start_date|timesince }}</span></td>
-                                                            <td class="text-center">
+                                                            <td class="text-center" style="vertical-align:middle"><img src="{{ member.portrait_url }}" class="img-circle"></td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.character_name }}</td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.ship_type_name }}</td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.logoff_date|date:"Y-m-d H:i" }}<br><span class="label label-primary">{{ member.logon_date|timesince }} ago</span><br><span class="label label-default">Duration: {{ member.logon_date|timesince:member.logoff_date }}</span></td>
+                                                            <td class="text-center" style="vertical-align:middle">{{ member.start_date|date:"Y-m-d H:i" }}<br><span class="label label-primary">{{ member.start_date|timesince }}</span></td>
+                                                            <td class="text-center" style="vertical-align:middle">
                                                                 <span class="glyphicon glyphicon-ok"></span>
                                                             </td>
                                                         </tr>
